--- a/css/common.css
+++ b/css/common.css
@@ -10,6 +10,8 @@ html,body{
     width: 12px;
 }
  input[type=number], input[type=password], input[type=search], input[type=tel], input[type=text]{
+     font-size: 14px;
+     color: #aaa;
     line-height:normal;
     width: 80%;
     height:auto;
@@ -25,9 +27,17 @@ html,body{
 .mui-slider-item{
     padding: 0 6px;
 }
+input::placeholder{
+    font-size: 12px;
+    color: #ccc;
+}
+input::input-placeholder{
+    font-size: 12px;
+    color: #ccc;
+}
 input::-webkit-input-placeholder {
-    font-size: 12px!important;
-    color: #ccc!important;
+    font-size: 12px;
+    color: #ccc;
 }
 .mui-poppicker-header .mui-btn {
     border-radius: 20px;
@@ -55,5 +65,8 @@ input::-webkit-input-placeholder {
 .mui-toast-message{
     background-color: rgba(0,0,0,.6);
     color: #fff;
+}
+.ago-score a{
+    color: #666;
 }
 * { touch-action: pan-y; } 
